# ProteinSST

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: cb513.csv  test.csv
notebooks/archive/: tier0_cnn_brnn.ipynb  tier1_cnn_bilstm.ipynb  tier1_cnn_bilstm.py  tier3_plm_bilstm.py  tier4_transconv.ipynb  tier4_transconv.py
notebooks/eda/: eda.ipynb  eda.py  high_similarity_pairs.csv  leakage_report.json
notebooks/kaggle/: kaggle_training.ipynb  kaggle_training.py
notebooks/training/: tier0_cnn_brnn.ipynb  tier0_cnn_brnn.py  tier1_baseline.ipynb  tier1_baseline.py  tier1_cnn_bilstm.ipynb  tier1_cnn_bilstm.py  tier2_cnn.ipynb  tier2_cnn.py  tier2_cnn_bilstm_attention.ipynb  tier2_cnn_bilstm_attention.py  tier3_cnn_rnn.ipynb  tier3_cnn_rnn.py  tier3_plm_bilstm.ipynb  tier3_plm_bilstm.py  tier4_transconv.ipynb  tier4_transconv.py  tier5_finetuned_esm2.ipynb  tier5_finetuned_esm2.py
scripts/: download_cb513.py  extract_embeddings.py
src/: __init__.py  augmentation.py  config.py  data.py  hub.py  losses.py  metrics.py  plm_registry.py  training.py
src/models/: __init__.py  classification_heads.py  cnn_blocks.py  plm_backbone.py  rnn_blocks.py  tier0_cnn_brnn.py  tier1_baseline.py  tier1_cnn_bilstm.py  tier2_cnn.py  tier2_cnn_bilstm_attention.py  tier3_cnn_rnn.py  tier3_plm_bilstm.py  tier4_transconv.py  tier5_esm2_finetune.py
