[project]
name = "proteinsst"
version = "0.1.0"
description = "End-to-end pipeline for protein structure prediction using deep learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trackio>=0.1.0",
    "huggingface-hub>=0.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "datasets>=4.4.1",
    "transformers>=4.57.3",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "sentencepiece>=0.2.1",
    "ankh>=0.0.7",
    "wandb>=0.23.1",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "pytorch-crf>=0.7.2",
]
